--- a/app/src/main/res/layout/activity_colours.xml
+++ b/app/src/main/res/layout/activity_colours.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".colours"
     android:background="@drawable/background1">
+
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
@@ -13,14 +19,14 @@
         android:layout_marginLeft="120dp"
         android:layout_marginTop="100dp"
         android:text="TextView"
-        android:textStyle="bold"
         android:textSize="35dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.197"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.018" />
+        app:layout_constraintVertical_bias="0.063" />
 
     <ImageView
         android:id="@+id/imageButtonOne"
@@ -59,20 +65,20 @@
 
     <ImageButton
         android:id="@+id/imgbutton"
-        android:src="@drawable/sound"
-        android:background="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:foregroundGravity="center"
+        android:src="@drawable/sound"
         app:layout_constraintBottom_toTopOf="@+id/textView_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintHorizontal_bias="0.891"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.375"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:foregroundGravity="center"/>
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/ic_launcher" />
 </android.support.constraint.ConstraintLayout>
