--- a/app/src/main/res/layout/activity_lesson_three.xml
+++ b/app/src/main/res/layout/activity_lesson_three.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/background1"
     tools:context=".LessonThree">
-
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
