--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,10 @@
     android:orientation="vertical"
     android:background="@drawable/background1"
     android:gravity="center_horizontal">
-
+<include
+    layout="@layout/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="150dp"
