--- a/app/src/main/res/layout/activity_task_check.xml
+++ b/app/src/main/res/layout/activity_task_check.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/background1"
     tools:context=".TaskCheck">
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textViewFour"
