--- a/app/src/main/res/layout/level_finished.xml
+++ b/app/src/main/res/layout/level_finished.xml
@@ -26,8 +26,6 @@
     </LinearLayout>
 
 
-
-
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="141dp"
@@ -46,21 +44,11 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
 
-        android:gravity="right"
+        android:gravity="center"
         android:text="Successfully completed"
         android:textAllCaps="false"
         android:textColor="@color/ColorWhite"
         android:textSize="18sp" />
-    <TextView
-        android:id="@+id/levelname"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-
-        android:layout_marginLeft="7sp"
-        android:text=""
-        android:textColor="@color/ColorWhite"
-        android:textSize="18sp"
-        />
 </android.support.v7.widget.LinearLayoutCompat>
 
 
@@ -70,7 +58,9 @@
         android:layout_marginTop="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="toTaskTwo"
 
         android:text="Continue" />
+
 
 </LinearLayout>
